--- a/res/vertical.css
+++ b/res/vertical.css
@@ -30,9 +30,9 @@
 .cube-fill {
 	right: calc(1vw - 2px);
 	bottom: calc(1vw - 2px);
-	transform: translateZ(calc(2px - 1vw));
-	width: calc(30vw - 1px);
-	height: calc(30vw - 1px);
+	transform: translateZ(calc(3px - 1vw));
+	width: calc(30vw - 3px);
+	height: calc(30vw - 3px);
 }
 #f0 {
 	transform: translateY(15vw) translateZ(15vw) rotateX(-90deg);
